--- a/week3/index.html
+++ b/week3/index.html
@@ -1,1 +1,13 @@
-welcom to week 3 
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>
+          Week 3 - HTML Text and Seantics  
+        </title>
+    </head>
+
+    <body>
+       <!--This is a HTML comment--> 
+    </body>
+</html>
