adding coffee page

--- a/week3/index.html
+++ b/week3/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>
-          Week 3 - HTML Text and Seantics  
-        </title>
-    </head>
 
-    <body>
-       <!--This is a HTML comment--> 
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>
+        Reggie's Coffee Shop - Home
+    </title>
+</head>
+
+<body>
+    <!-- tagname + Tab to autocomplete -->
+    <!--command + right arrow key to jump to end of line -->
+    <!-- alt + up or down arrow keys to move a line of code -->
+    <header>
+        <h1>Reggie's Coffee Shop</h1>
+        <nav>NAVIGATION</nav>
+    </header>
+    <main></main>
+    <footer></footer>
+    
+</body>
+
 </html>
