finsh coffee page

--- a/week3/index.html
+++ b/week3/index.html
@@ -16,9 +16,36 @@
         <h1>Reggie's Coffee Shop</h1>
         <nav>NAVIGATION</nav>
     </header>
-    <main></main>
-    <footer></footer>
-    
+    <main>
+        <article>
+            <h2>Our Story</h2>
+            <blockquote>
+                We Love Coffee <cite>- Reggie and Maria</cite>
+            </blockquote>
+            <p>
+                we are <em>Family owned business</em>. Reggie is the
+                <abbr title="Chief Execute Officer">CEO</abbr> and head barista of the shop.
+                Maria is the pastry chef and is in-charge of the bake shop.<br>
+                Celebrating their 10<sup>th</sup> anniversary together in December 2021.
+            </p>
+            <hr>
+            <section>
+             <h3>About Us</h3>   
+             <p>
+                 We are a local coffee shop based in Ottawwa. Our specialty is 
+                 <b>organic fair-trade</b>Coffee.
+             </p>
+            </section>
+        </article>
+        <aside>
+            <h3>Merchandise</h3>
+            <p>T-Shirts, Hats, Hoodies</p>
+        </aside>
+    </main>
+    <footer>
+        <p>Copyright Reggie's Coffee Shop, 2021</p>
+    </footer>
+
 </body>
 
 </html>
