Adding week 3 demo

--- a/week3/index.html
+++ b/week3/index.html
@@ -30,22 +30,61 @@
             </p>
             <hr>
             <section>
-             <h3>About Us</h3>   
-             <p>
-                 We are a local coffee shop based in Ottawwa. Our specialty is 
-                 <b>organic fair-trade</b>Coffee.
-             </p>
+                <h3>About Us</h3>
+                <p>
+                    We are a local coffee shop based in Ottawwa. Our specialty is
+                    <b>organic fair-trade</b>Coffee.
+                </p>
             </section>
         </article>
         <aside>
             <h3>Merchandise</h3>
-            <p>T-Shirts, Hats, Hoodies</p>
+            <ul>
+                <li>T-Shirts</li>
+                <li>Hats</li>
+                <li>Hoodies</li>
+            </ul>
         </aside>
+        <!-- *******about section of the artcle*******-->
+        <section>
+            <h3>Events</h3>
+            <ol>
+                <li>Feb 23<sup>rd</sup>&hyphen; Coffee for Hope Foundation</li>
+                <li>Mar 17<sup>th</sup>&hyphen; Live Music</li>
+            </ol>
+        </section>
+        <section>
+            <h3>Treat of the Week</h3>
+            <dl>
+                <dt>Name</dt>
+                <dd>Banana Bread</dd>
+                <dt>Calories</dt>
+                <dd>250</dd>
+                <dt>Ingredients</dt>
+                <dd>
+                    <!-- alt + command + down arrow key, for multiple edit points.
+                    Escape to get rid of them. -->
+                    <!-- tagname *number to get multiple tags. li*5 will give us 5 list items -->
+                    <ul>
+                        <li>all purpose flour</li>
+                        <li>baking soda</li>
+                        <li>baking powder</li>
+                        <li>salt</li>
+                        <li>butter</li>
+                        <li>suger</li>
+                        <li>eggs</li>
+                        <li>bananas</li>
+                        <li>lemin jice</li>
+                    </ul>
+                </dd>
+            </dl>
+        </section>
     </main>
+    <!-- *******footer*******-->
     <footer>
-        <p>Copyright Reggie's Coffee Shop, 2021</p>
+        <p>Copyright &copy; Reggie&apos;s Coffee Shop, 2021</p>
     </footer>
-
+    
 </body>
 
 </html>
