--- a/week4/index.html
+++ b/week4/index.html
@@ -15,15 +15,21 @@
     <header>
         <h1>Reggie's Coffee Shop</h1>
         <nav>
-            <a href="contact.html">Contact Us</a>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact Us</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <main>
         <article>
             <h2>Our Story</h2>
             <!--adding image-->
-            <img src="images/coffee-shop.jpg" 
-                 alt="coffee cup on top of pile of coffee beans">
+            <img src="images/coffee-shop.jpg" alt="coffee cup on top of pile of coffee beans">
 
             <blockquote>
                 We Love Coffee <cite>- Reggie and Maria</cite>
@@ -80,17 +86,18 @@
                         <li>suger</li>
                         <li>eggs</li>
                         <li>bananas</li>
-                        <li>lemin jice</li>
+                        <li>lemon jice</li>
                     </ul>
                 </dd>
             </dl>
+            <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank">Get the Recipe</a>
         </section>
     </main>
     <!-- *******footer*******-->
     <footer>
         <p>Copyright &copy; Reggie&apos;s Coffee Shop, 2021</p>
     </footer>
-    
+
 </body>
 
 </html>
