--- a/week4/index.html
+++ b/week4/index.html
@@ -26,6 +26,9 @@
         </nav>
     </header>
     <main>
+        <!--adding an on page link-->
+        <a href="#treatofweek">Traet of the Week</a>
+        <!--main article-->
         <article>
             <h2>Our Story</h2>
             <!--adding image-->
@@ -65,7 +68,8 @@
                 <li>Mar 17<sup>th</sup>&hyphen; Live Music</li>
             </ol>
         </section>
-        <section>
+        <!--*********************treat of week section********************-->
+        <section id="treatofweek">
             <h3>Treat of the Week</h3>
             <dl>
                 <dt>Name</dt>
