--- a/week4/contact.html
+++ b/week4/contact.html
@@ -31,7 +31,8 @@
         <section>
             <h3>We love to hear from you</h3>
             <form action="thanks.html" method="get">
-
+                <label for="fullname">Your Name</label>
+                <input type="text" id="fullname" name="" placeholder=""> 
             </form>
         </section>
     </main>
