--- a/week4/contact.html
+++ b/week4/contact.html
@@ -32,7 +32,8 @@
             <h3>We love to hear from you</h3>
             <form action="thanks.html" method="get">
                 <label for="fullname">Your Name</label>
-                <input type="text" id="fullname" name="" placeholder=""> 
+                <input type="text" id="fullname" name="fullname" placeholder="John Doe"
+                        value="Mr."> 
             </form>
         </section>
     </main>
