--- a/week4/contact.html
+++ b/week4/contact.html
@@ -31,9 +31,37 @@
         <section>
             <h3>We love to hear from you</h3>
             <form action="thanks.html" method="get">
-                <label for="fullname">Your Name</label>
-                <input type="text" id="fullname" name="fullname" placeholder="John Doe"
-                        value="Mr."> 
+                <div>
+                    <label for="fullname">Your Name</label>  
+                    <input type="text" id="fullname" name="fullname" placeholder="John Doe" value="Mr.">
+                </div>
+
+                <div>
+                    <label for="youremail">Your Email</label>
+                    <input type="email" id="youremail" name="youremail" required>
+                </div>
+
+                <div>
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message"></textarea> 
+                </div>
+
+                <div>
+                    <label for="ticktes">How many ticktes? (sold in pairs)</label>
+                    <input type="number" id="ticktes" name="ticktes" min="2" max="10" step="2">
+                </div>
+
+                <div>
+                    <label for="row">Select Row</label>
+                    <select name="row" id="row">
+                        <option value="front">Front Row</option>
+                        <option value="center" selected>Center Row</option>
+                        <option value="back">Back Row</option>
+                    </select>
+                </div>
+
+                <button type="submit">Sign me up!</button>
+
             </form>
         </section>
     </main>
