--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Xiaoyu Ding</h1>
     </header>
-    <img src="images/myself.jpg" alt="XiaoyuDing">
+    <img src="images/myself.png" alt="XiaoyuDing">
 
     <a href="notes.html">Notes Page</a>
     
