move style tags

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -22,11 +22,11 @@
     <main>
         <article>
             <!-- ***************Adding three sections for the web page***************-->
-            <h2 style="color:tomato">About Me</h2>
+            <h2>About Me</h2>
            
             <!-- ***************section 1 Background Introduction***************-->
             <section>
-                <h3 style="color:steelblue;">Background Introduction</h3>
+                <h3>Background Introduction</h3>
                 <p>
                     My name is Xiaoyu Ding. I am came from China and 2021 is 8<sup>th</sup> year that I have been living
                     in Canada.
@@ -45,7 +45,7 @@
 
             <!-- ***************section 2 My hobbies***************-->
             <section>
-                <h3 style="color:steelblue;">My hobbies</h3>
+                <h3>My hobbies</h3>
                 <img src="images/Skating.jpg" alt="Skating">
                 <img src="images/Drawing.jpg" alt="Drawing">
                 <dl>
@@ -71,7 +71,7 @@
 
             <!-- ***************section 3 My Favorite Inspirational Quotes***************-->
             <section>
-                <h3 style="color:steelblue;">My Favorite Inspirational Quotes</h3>
+                <h3>My Favorite Inspirational Quotes</h3>
 
 
                 <!-- ***************Adding 3 ordered Inspirational Quotes***************-->
@@ -100,7 +100,7 @@
     </main>
 
     <hr>
-    <h3 style="color:steelblue;">XiaoyuDing's Index Page Checked</h3>
+    <h3>XiaoyuDing's Index Page Checked</h3>
     <img src="images/checkIndexPage.png" alt="XiaoyuDing's Index Page Checked">
 
      <!-- ***************Adding footer***************-->
