--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -23,11 +23,11 @@
     <main>
         <article>
             <!-- ***************Adding three sections for the web page***************-->
-            <h2 style="color:tomato">5 HTML Tags</h2>
+            <h2>5 HTML Tags</h2>
 
             <!-- ***************section of 5 HTML tags***************-->
             <section>
-                <h3 style="color:steelblue;">Introduction About 5 HTML Tags</h3>
+                <h3>Introduction About 5 HTML Tags</h3>
                 <dl>
                     <dt><em><b> &#60;!DOCTYPE&#62;</b></em></dt>
                     <dd>Defines the document type.</dd>
@@ -50,7 +50,7 @@
     </main>
 
     <hr>
-    <h3 style="color:steelblue;">XiaoyuDing's Notes Page Checked</h3>
+    <h3>XiaoyuDing's Notes Page Checked</h3>
     <img src="images/notesPage.png" alt="XiaoyuDing's Notes Page Checked">
 
     <!-- ***************Adding footer***************-->
