--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -8,6 +8,7 @@
     <title>
         Xiaoyu Ding's Notes Page
     </title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <!-- ***************Adding body part for the web page***************-->
