Styling the HTML Website

--- a/week5/index.html
+++ b/week5/index.html
@@ -13,7 +13,7 @@
     <!-- tagname + Tab to autocomplete -->
     <!--command + right arrow key to jump to end of line -->
     <!-- alt + up or down arrow keys to move a line of code -->
-    <header style="background-color: peru;">
+    <header>
         <h1>Reggie's Coffee Shop</h1>
         <nav>
             <ul>
