--- a/week7/index.html
+++ b/week7/index.html
@@ -30,6 +30,7 @@
         <!--adding an on page link-->
         <a href="#treatofweek" class="orange-link">Traet of the Week</a>
         <!--main article-->
+        <div class="clearfix">
         <article>
             <h2>Our Story</h2>
             <!--adding image-->
@@ -61,6 +62,7 @@
                 <li>Hoodies</li>
             </ul>
         </aside>
+    </div>
         <!-- *******about section of the artcle*******-->
         <section>
             <h3>Events</h3>
