--- a/midterm/index.html
+++ b/midterm/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        Reggie's Coffee Shop - Home
+        Lone Starfish
     </title>
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -13,8 +13,8 @@
     <!-- tagname + Tab to autocomplete -->
     <!--command + right arrow key to jump to end of line -->
     <!-- alt + up or down arrow keys to move a line of code -->
-    <header style="background-color: peru;">
-        <h1>Reggie's Coffee Shop</h1>
+    <header style="background-color:#aad4cf;">
+        <h1>Lone Starfish</h1>
         <nav>
             <ul>
                 <li>
