--- a/midterm/index.html
+++ b/midterm/index.html
@@ -10,129 +10,103 @@
 </head>
 
 <body>
-    <!-- tagname + Tab to autocomplete -->
-    <!--command + right arrow key to jump to end of line -->
-    <!-- alt + up or down arrow keys to move a line of code -->
-    <header style="background-color:#aad4cf;">
-        <h1>Lone Starfish</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact Us</a>
-                </li>
-            </ul>
-        </nav>
+    <header>
+        <h1 class="hearder">Lone Starfish</h1>
     </header>
-    <main>
-        <!--adding an on page link-->
-        <a href="#treatofweek" class="orange-link">Traet of the Week</a>
-        <!--main article-->
-        <div class="clearfix">
-        <article>
-            <h2>Our Story</h2>
-            <!--adding image-->
-            <img src="images/coffee-shop.jpg" alt="coffee cup on top of pile of coffee beans">
 
-            <blockquote class="large-text">
-                We Love Coffee <cite>- Reggie and Maria</cite>
-            </blockquote>
+<!-- created navgetion list -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">HOME</a>
+            </li>
+            <li>
+                <a href="story.html">STORY</a>
+            </li>
+            <li>
+                <a href="contact.html">CONTACT</a>
+            </li>
+        </ul>
+    </nav>
+
+    <!-- created main page -->
+    <main>
+        <!--main article-->
+        <div class="Starfish">
+        <article>
+            <h2>Life of a Starfish</h2>
+            <!--adding image-->
+            <img src="images/lone-starfish.jpg" alt="Starfish image">
+
             <p>
-                we are <em>Family owned business</em>. Reggie is the
-                <abbr title="Chief Execute Officer">CEO</abbr> and head barista of the shop.
-                Maria is the pastry chef and is in-charge of the bake shop.<br>
-                Celebrating their 10<sup>th</sup> anniversary together in December 2021.
+                Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; 
+                slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye,
+                &#34;french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder.&#34;
+                Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf 
+                loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. 
+                Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; 
+                rock bass sea devil trunkfish. Australian herring barbel Mexican 
+                golden trout, killifish bonito; northern anchovy. Waryfish,
+                &#34;lionfish; longfin smelt; leopard danio dragonfish,&#34; 
+                Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra 
+                squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling 
+                flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish 
+                halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench 
+                squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. 
+                Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish 
+                flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish 
+                pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua&apos;a barred 
+                danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, 
+                dottyback.
             </p>
-            <hr>
+            
             <section>
-                <h3>About Us</h3>
-                <p>
-                    We are a local coffee shop based in Ottawwa. Our specialty is
-                    <b>organic fair-trade</b>Coffee.
-                </p>
+                <h3>Facts About Starfish</h3>
+                <ul>
+                    <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                    <li>Waryfish, &#34;lionfish; longfin smelt; leopard danio dragonfish,&#34; Lost River sucker, mojarra.</li>
+                    <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
+                    <li>Waryfish, &#34;lionfish; longfin smelt; leopard danio dragonfish,&#34; Lost River sucker, mojarra. </li>
+                </ul>
             </section>
         </article>
-        <aside>
-            <h3>Merchandise</h3>
-            <ul>
-                <li>T-Shirts</li>
-                <li>Hats</li>
-                <li>Hoodies</li>
-            </ul>
-        </aside>
     </div>
         <!-- *******about section of the artcle*******-->
         <section>
-            <h3>Events</h3>
-            <ol>
-                <li>Feb 23<sup>rd</sup>&hyphen; Coffee for Hope Foundation</li>
-                <li>Mar 17<sup>th</sup>&hyphen; Live Music</li>
-            </ol>
-        </section>
-        <!--*********************treat of week section********************-->
-        <section id="treatofweek">
-            <h3>Treat of the Week</h3>
-            <dl>
-                <dt>Name</dt>
-                <dd>Banana Bread</dd>
-                <dt>Calories</dt>
-                <dd>250</dd>
-                <dt>Ingredients</dt>
-                <dd>
-                    <!-- alt + command + down arrow key, for multiple edit points.
-                    Escape to get rid of them. -->
-                    <!-- tagname *number to get multiple tags. li*5 will give us 5 list items -->
-                    <ul>
-                        <li>all purpose flour</li>
-                        <li>baking soda</li>
-                        <li>baking powder</li>
-                        <li>salt</li>
-                        <li>butter</li>
-                        <li>suger</li>
-                        <li>eggs</li>
-                        <li>bananas</li>
-                        <li>lemon jice</li>
-                    </ul>
-                </dd>
-            </dl>
-            <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" 
-            target="_blank" class="orange-link larg-text">Get the Recipe</a>
-        </section>
+            <h3>Contact to learn more</h3>
+            <form action="Contact.html" method="get">
+                <div>
+                    <label for="fullname">Your Name</label>
+                    <input type="text" id="fullname" name="fullname"><!--placeholder="John Doe" value=""> -->
+                </div>
 
-        <!-- Adding Section for menu -->
-        <section>
-            <h3>Menu Specials</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th colspan="2">Items</th>
-                        <th rowspan="2">Price</th>
-                    </tr>
-                    <tr>
-                        <th>Name</th>
-                        <th>Calories</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Banana Bread</td>
-                        <td>250</td>
-                        <td>&dollar; 6</td>
-                    </tr>
-                    <tr>
-                        <td>Oatmeal</td>
-                        <td>110</td>
-                        <td>&dollar; 8</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+                <div>
+                    <label for="youremail">Your Email</label>
+                    <input type="email" id="youremail" name="youremail" required>
+                </div>
+
+                <div>
+                    <label for="message">Your Message</label>
+                    <textarea name="message" id="message"></textarea>
+                </div>
+
+                <div>
+                    <h3>Would you like to visit the starfish?</h3>
+                    <label for="yes">Yes</label>
+                    <input type="radio" name="past" id="yes">
+
+                    <label for="no">No</label>
+                    <input type="radio" name="past" id="no">
+
+                    <label for="maybe">Maybe</label>
+                    <input type="radio" name="past" id="maybe">
+                </div>
+        </section>  
     </main>
+
     <!-- *******footer*******-->
     <footer class="site-footer">
-        <p>Copyright &copy; Reggie&apos;s Coffee Shop, 2021</p>
+        <p>&copy; Lone Starfish.</p>
     </footer>
 
 </body>
