working on midterm assign 3/3

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="container">
 
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,7 @@
         <article>
             <h2>Life of a Starfish</h2>
             <!--adding image-->
-            <img src="images/lone-starfish.jpg" alt="Starfish image">
+            <img class="starfishimg" src="images/lone-starfish.jpg" alt="Starfish image">
 
             <p>
                 Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; 
