--- a/midterm/index.html
+++ b/midterm/index.html
@@ -14,8 +14,8 @@
         <h1 class="hearder">Lone Starfish</h1>
     </header>
 
-<!-- created navgetion list -->
-    <nav>
+    <!-- created navgetion list -->
+    <nav class="nav">
         <ul>
             <li>
                 <a href="index.html">HOME</a>
@@ -33,51 +33,55 @@
     <main>
         <!--main article-->
         <div class="Starfish">
-        <article>
-            <h2>Life of a Starfish</h2>
-            <!--adding image-->
-            <img class="starfishimg" src="images/lone-starfish.jpg" alt="Starfish image">
+            <article>
+                <h2>Life of a Starfish</h2>
+                <!--adding image-->
+                <img class="starfishimg" src="images/lone-starfish.jpg" alt="Starfish image">
 
-            <p>
-                Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; 
-                slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye,
-                &#34;french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder.&#34;
-                Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf 
-                loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. 
-                Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; 
-                rock bass sea devil trunkfish. Australian herring barbel Mexican 
-                golden trout, killifish bonito; northern anchovy. Waryfish,
-                &#34;lionfish; longfin smelt; leopard danio dragonfish,&#34; 
-                Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra 
-                squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling 
-                flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish 
-                halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench 
-                squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. 
-                Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish 
-                flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish 
-                pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua&apos;a barred 
-                danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, 
-                dottyback.
-            </p>
-            
-            <section>
-                <h3>Facts About Starfish</h3>
-                <ul>
-                    <li class="li-1">Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-                    <li class="li-2">Waryfish, &#34;lionfish; longfin smelt; leopard danio dragonfish,&#34; Lost River sucker, mojarra.</li>
-                    <li class="li-3">Herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
-                    <li class="li-4">Waryfish, &#34;lionfish; longfin smelt; leopard danio dragonfish,&#34; Lost River sucker, mojarra. </li>
-                </ul>
-            </section>
-        </article>
-    </div>
+                <p>
+                    Swallower catla Black angelfish grunter striped bass scissor-tail rasbora;
+                    slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye,
+                    &#34;french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder.&#34;
+                    Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf
+                    loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard.
+                    Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish;
+                    rock bass sea devil trunkfish. Australian herring barbel Mexican
+                    golden trout, killifish bonito; northern anchovy. Waryfish,
+                    &#34;lionfish; longfin smelt; leopard danio dragonfish,&#34;
+                    Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra
+                    squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling
+                    flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish
+                    halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench
+                    squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish.
+                    Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish
+                    flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish
+                    pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua&apos;a barred
+                    danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally,
+                    dottyback.
+                </p>
+
+                <section>
+                    <h3>Facts About Starfish</h3>
+                    <ul>
+                        <li class="li-1">Australian herring barbel Mexican golden trout, killifish bonito; northern
+                            anchovy.</li>
+                        <li class="li-2">Waryfish, &#34;lionfish; longfin smelt; leopard danio dragonfish,&#34; Lost
+                            River sucker, mojarra.</li>
+                        <li class="li-3">Herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
+                        <li class="li-4">Waryfish, &#34;lionfish; longfin smelt; leopard danio dragonfish,&#34; Lost
+                            River sucker, mojarra. </li>
+                    </ul>
+                </section>
+            </article>
+        </div>
         <!-- *******about section of the artcle*******-->
         <section>
             <h3>Contact to learn more</h3>
-                <form class="box" action="Contact.html" method="get">
+            <form class="box" action="Contact.html" method="get">
                 <div>
                     <label class="fullname" for="fullname">Your Name</label>
-                    <input class="nameinput" type="text" id="fullname" name="fullname"><!--placeholder="John Doe" value=""> -->
+                    <input class="nameinput" type="text" id="fullname" name="fullname">
+                    <!--placeholder="John Doe" value=""> -->
                 </div>
 
                 <div>
@@ -105,7 +109,9 @@
                 <div class="button">
                     <p>SEND</p>
                 </div>
-        </section>  
+
+            </form>
+        </section>
     </main>
 
     <!-- *******footer*******-->
