--- a/final-project/index.html
+++ b/final-project/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        Xiaoyu Ding
+        Xiaoyu Ding Final Project 
     </title>
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -14,99 +14,204 @@
 <!-- ***************Adding body part for the web page***************-->
 
 <body>
+    <!-- Adding Header -->
     <header>
-        <h1>Xiaoyu Ding</h1>
+
+        <img class="logoimg" src="images/logo.png" alt="logo image">
+
+        <!-- create nav -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="#home" class="home-link">Home</a>
+                </li>
+                <li>
+                    <a href="#aboutus" class="aboutus-link">About Us</a>
+                </li>
+                <li>
+                    <a href="#services" class="services-link">Services</a>
+                </li>
+                <li>
+                    <a href="#team" class="team-link">Team</a>
+                </li>
+                <li>
+                    <a href="#connectus" class="connectus-link">Contact</a>
+                </li>
+                <li>
+                    <a href="contact.html">Search</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-    <img id="my-image" src="images/myself.png" alt="XiaoyuDing">
-    <hr>
-    <a id="notesPage" href="notes.html">Notes Page</a>
+
+
 
     <!-- ***************Adding main part for the web page***************-->
     <main>
         <article>
-            <!-- ***************Adding three sections for the web page***************-->
-            <h2 class="site-title">About Me</h2>
+            <!-- Adding home section  -->
+            <section class="home">
+                <h1 class="homeh1">
+                    Welcome to Three Star Media
+                </h1>
 
-            <!-- ***************section 1 Background Introduction***************-->
-            <section>
-                <h3>Background Introduction</h3>
-                <p>
-                    My name is Xiaoyu Ding. I am came from China and 2021 is 8<sup>th</sup> year that I have been living
-                    in Canada.
-                    As my previous life in China, I already had a bachelor's degree in art design.
-                    However, I wanted to challenge myself in a new field when I decided studing in<em>Algonquin
-                        College</em>
-                    so I studied computer programmer at <em>Algonquin College</em> and got my diploma.
-                    During the two years of study experience,
-                    I felt that writing code was not very interesting.
-                    According to my experience, I decided to study the current course.
-                    I'm very enjoying my studies so far and I think I've finally found the right field for me.
-                    In this semster I started learning <abbr title="Hypertext Markup Language">HTML</abbr>
-                    and <abbr title="Cascading Style Sheets">CSS</abbr> I belive thoese things gona be very cool for me.
+                <p class="homep">
+                    HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                    It defines the meaning and structure of web content. 
+                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation (CSS) 
+                    or functionality/behavior (JavaScript).
+                </p>
+
+                <div class="connectbutton">
+                    <p>Connect with us</p>
+                </div>
+                <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
+            </section>
+
+            <!-- About us -->
+            <section class="aboutus">
+                <img class="sboutusimg" src="images/about-us.jpg" alt="about us image">
+                <h1 class="aboutush1">About Us</h1>
+                <p class="aboutusp">
+                    HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                    It defines the meaning and structure of web content. 
+                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation (CSS) 
+                    or functionality/behavior (JavaScript).
                 </p>
             </section>
-            <hr>
 
-            <!-- ***************section 2 My hobbies***************-->
-            <section>
-                <h3>My hobbies</h3>
-                <img id="skating" src="images/Skating.jpg" alt="Skating">
-                <img id="drawing" src="images/Drawing.jpg" alt="Drawing">
-                <ul>
-                    <li class="skating">Skating</li>
-                    <li class="sk">Skating is the use of skating shoes on the ice to walk or race and other sports.
-                        In the Winter Olympic Games, skating as a separate major event,
-                        under the competition category of short track speed skating,
-                        speed skating and performance of the category of figure skating 3 sub-events.In addition,
-                        the use of special roller skates in the smooth ground forward movement known as "roller
-                        skating",
-                        that is, roller skating,
-                        also known as roller skating.</li>
+            <!--created our services section -->
+            <section class="services">
 
-                    <li class="drawing">Drawing</li>
-                    <li class="dr">On a technical level, painting is an action of adding color to a surface as a
-                        supporting
-                        surface.
-                        The surfaces can be paper, canvas, wood, glass, lacquer, or concrete,
-                        and the tools used to paint can be brushes, knives, sponges, even paint sprayers,
-                        toothbrushes, fingers, and so on.</li>
-                </ul>
+                <h1 class="servicesh1">Our Services</h1>
+
+                <!-- *************digtal transformation *************-->
+                <div class="digital">
+                    <img class="digitalimg" src="images/digital.jpg" alt="digital image">
+                    <h2>Digtal Transformation</h2>
+                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                        It defines the meaning and structure of web content.
+                    </p>
+
+                    <div class="digitalbutton">
+                        <p>Digital Plans</p>
+                    </div>
+                </div>
+
+                <!-- *************Marketing******************* -->
+                <div class="marketing">
+                    <img class="marketingimg" src="images/marketing.jpg" alt="marketing image">
+                    <h2>Marketing</h2>
+                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                        It defines the meaning and structure of web content.
+                    </p>
+
+                    <div class="marketingbutton">
+                        <p>Marketing Plans</p>
+                    </div>
+                </div>
+
+                <!-- ********************Video Production**************************** -->
+                <div class="video">
+                    <img class="videoimg" src="images/video.jpg" alt="video image">
+                    <h2>Video Production</h2>
+                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                        It defines the meaning and structure of web content.
+                    </p>
+
+                    <div class="videobutton">
+                        <p>Video Plans</p>
+                    </div>
+                </div>
+
+                <!-- *********************Web Development*************************** -->
+                <div class="web">
+                    <img class="webimg" src="images/web.jpg" alt="web image">
+                    <h2>Web Development</h2>
+                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                        It defines the meaning and structure of web content.
+                    </p>
+
+                    <div class="webbutton">
+                        <p>Web Plans</p>
+                    </div>
+                </div>
+
+                <!-- ***********************Print************************* -->
+                <div class="print">
+                    <img class="printimg" src="images/print.jpg" alt="print image">
+                    <h2>Print</h2>
+                    <p> HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                        It defines the meaning and structure of web content.
+                    </p>
+
+                    <div class="printbutton">
+                        <p>Print Plans</p>
+                    </div>
+                </div>
             </section>
-            <hr>
 
-            <!-- ***************section 3 My Favorite Inspirational Quotes***************-->
-            <section>
-                <h3>My Favorite Inspirational Quotes</h3>
+            <!-- ******************Our Vision****************************** -->
+            <section class="vision">
+                <h1 class="visionh1">
+                    Our Vision
+                </h1>
 
+                <p class="visionp">
+                    HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                    It defines the meaning and structure of web content. 
+                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation (CSS) 
+                    or functionality/behavior (JavaScript).
+                </p>
 
-                <!-- ***************Adding 3 ordered Inspirational Quotes***************-->
-                <ul>
-                    <li>
-                        <blockquote>
-                            <b>Best Way To Get Started Is To Quit Talking And Begin Doing.</b> <cite>- Walt
-                                Disney</cite>
-                        </blockquote>
-                    </li>
-
-                    <li>
-                        <blockquote>
-                            <b>Speak less than you know; have more than you show.</b><cite>- William Shakespeare</cite>
-                        </blockquote>
-                    </li>
-
-                    <li>
-                        <blockquote>
-                            <b>We become what we think about.</b><cite>- Earl Nightingale</cite>
-                        </blockquote>
-                    </li>
-                </ul>
+                <div class="learnmorebutton">
+                    <p>Learn More</p>
+                </div>
+                <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
             </section>
+
+            <!-- ********************our team********************************* -->
+            <section class="team">
+                <h1>Our Team</h1>
+                <!-- *************John Doe******************* -->
+                <div class="john">
+                    <img class="johnimg" src="images/john.jpg" alt="john image">
+                    <h2>John Doe</h2>
+                    <h3>CEO and Co-owner</h3>
+                    <hr>
+                    <p> 
+                        HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                        It defines the meaning and structure of web content.
+                    </p>
+                </div>
+
+                <!-- *************Bob Rite******************* -->
+                <div class="bob">
+                    <img class="bobimg" src="images/bob.jpg" alt="bob image">
+                    <h2>Bob Rite</h2>
+                    <h3>CFO and Co-owner</h3>
+                    <hr>
+                    <p> 
+                        HTML (HyperText Markup Language) is the most basic building block of the Web. 
+                        It defines the meaning and structure of web content.
+                    </p>
+                </div>
+            </section>
+
+            <!-- **********************Contact Us********************************************* -->
+            <section class="connectus">
+                <div class="message">
+                    
+                </div>
+
+                <div class="location">
+                    
+                </div>
+
+            </section>
+
         </article>
     </main>
-
-    <hr>
-    <h3>XiaoyuDing's Index Page Checked</h3>
-    <img id="checkedimage" src="images/checkIndexPage.png" alt="XiaoyuDing's Index Page Checked">
 
     <!-- ***************Adding footer***************-->
     <footer>
