--- a/week10/index.html
+++ b/week10/index.html
@@ -6,7 +6,7 @@
     <title>
         week 10
     </title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="week10" href="css/main.css">
 </head>
 
 <body>
